Form with more spacing, correctly positioned labels

--- a/code/style.css
+++ b/code/style.css
@@ -89,6 +89,27 @@ fieldset {
   border-image: initial;
 }
 
+.dog-info {
+  border: 1px solid green;
+}
+
+.dog-info-div {
+  border: 1px solid orange;
+}
+
+.dog-info-div > label {
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.dog-info-div > div {
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+
 /* div:first-of-type {
   border: 1px solid pink;
 } */
@@ -174,4 +195,14 @@ this can be used for the FAQ-accordion. read more here: https://www.w3schools.co
 
 .active + .answer {
   /* some styling here */
+}
+
+footer {
+  border: 1px solid purple;
+  background-color: pink;
+  height: 30px;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+  text-justify: auto;
 }
